--- a/Service/.classpath
+++ b/Service/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry sourcepath="ECLIPSE_HOME/plugins/org.eclipse.jdt.source_3.1.1/src/org.junit_3.8.1/junitsrc.zip" kind="var" path="JUNIT_HOME/junit.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/AXIS_LIB"/>
 	<classpathentry kind="lib" path="lib/java/log4j-1.2.13.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/WSF - Plugin"/>
 	<classpathentry kind="output" path="classes"/>
 </classpath>
