update build.xml to fix lib reference bug
git-svn-id: https://cbilsvn.pmacs.upenn.edu/svn/gus/WSF/trunk@4613 4235af6a-31f9-0310-9ad3-ecf6348f2534

--- a/build.xml
+++ b/build.xml
@@ -27,9 +27,10 @@
                                            WSF/Plugin-Installation,
                                            WSF/Client-Installation">
 
+    <mkdir dir="${targetDir}/wsf-lib/java"/>
+
     <ant target="defaultProjectInstall"/>
 
-    <mkdir dir="${targetDir}/wsf/"/>
     <move file="${targetDir}/lib/java/WSF-Service.jar" todir="${targetDir}/wsf-lib/java" />
     <move file="${targetDir}/lib/java/WSF-Plugin.jar" todir="${targetDir}/wsf-lib/java" />
 
