git-svn-id: https://cbilsvn.pmacs.upenn.edu/svn/gus/WSF/trunk@4626 4235af6a-31f9-0310-9ad3-ecf6348f2534

--- a/build.xml
+++ b/build.xml
@@ -136,7 +136,7 @@
     <java classname="org.apache.axis.client.AdminClient" 
           fork="true">
       <classpath refid="classpath" />
-      <arg line="-l${webappBaseUrl}/servlet/AxisServlet" />
+      <arg line="-l${webserviceBaseUrl}/servlet/AxisServlet" />
       <arg line="${targetDir}/config/deploy.wsdd" />
     </java>
 
@@ -158,7 +158,7 @@
             
     <java classname="org.apache.axis.client.AdminClient" fork="true">
       <classpath refid="classpath" />
-      <arg line="-l${webappBaseUrl}/servlet/AxisServlet" />
+      <arg line="-l${webserviceBaseUrl}/servlet/AxisServlet" />
       <arg line="${targetDir}/config/wsfService-undeploy.wsdd" />
     </java>
   
