--- a/build.xml
+++ b/build.xml
@@ -125,8 +125,8 @@
 
   <target name="WSF-WebInstallation" depends="WSF-Installation">
 
-    <available file="${webAppTargetDir}/WEB-INF/wsf-config" type="dir" property="wsf-config.exist" />
-    <available file="${webAppTargetDir}/WEB-INF/lib/wsf-lib" type="dir" property="wsf-lib.exist" />
+    <available file="${webappTargetDir}/WEB-INF/wsf-config" type="dir" property="wsf-config.exist" />
+    <available file="${webappTargetDir}/WEB-INF/lib/wsf-lib" type="dir" property="wsf-lib.exist" />
     <available file="${targetDir}/config/wsfService-undeploy.wsdd" property="undeploy.exist" />
         
     <antcall target="WSF-WebUninstallation" />
@@ -137,17 +137,17 @@
           fork="true">
       <classpath refid="classpath" />
       <arg line="-l${webserviceBaseUrl}/servlet/AxisServlet" />
-      <arg line="${targetDir}/config/deploy.wsdd" />
+      <arg line="${targetDir}/config/wsfService-deploy.wsdd" />
     </java>
 
   </target>
 
   <target name="createLibLink" unless="wsf-lib.exist">
-    <symlink link="${webappTargetDir}/WEB-INF/lib/wsf-lib" resource="${targetDir}/wsf-lib/java"/>
+    <symlink link="${webappTargetDir}/WEB-INF/lib/wsf-lib/" resource="${targetDir}/wsf-lib/java/"/>
   </target>
 
   <target name="createConfigLink" unless="wsf-config.exist">
-    <symlink link="${webappTargetDir}/WEB-INF/wsf-config" resource="${targetDir}/config"/>
+    <symlink link="${webappTargetDir}/WEB-INF/wsf-config/" resource="${targetDir}/config/"/>
   </target>
   
   <!-- ooooooooooooooooooooo  Install web components  ooooooooooooooooooooo -->
