copy the configuration files instead of using symbolic links
git-svn-id: https://cbilsvn.pmacs.upenn.edu/svn/gus/WSF/trunk@4649 4235af6a-31f9-0310-9ad3-ecf6348f2534

--- a/build.xml
+++ b/build.xml
@@ -131,6 +131,10 @@
     <antcall target="WSF-WebUninstallation" />
     <antcall target="createConfigLink" />
     
+    <copy todir="${webappTargetDir}/WEB-INF/wsf-config">
+      <fileset dir="${targetDir}/config" />
+    </copy>
+    
     <copy todir="${webappTargetDir}/WEB-INF/lib">
       <fileset dir="${targetDir}/wsf-lib/java" />
     </copy>
@@ -145,7 +149,7 @@
   </target>
 
   <target name="createConfigLink" unless="wsf-config.exist">
-    <symlink link="${webappTargetDir}/WEB-INF/wsf-config" resource="${targetDir}/config"/>
+    <mkdir dir="${webappTargetDir}/WEB-INF/wsf-config"/>
   </target>
   
   <!-- ooooooooooooooooooooo  Install web components  ooooooooooooooooooooo -->
