--- a/Plugin/.classpath
+++ b/Plugin/.classpath
@@ -2,6 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="src/java"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="lib/java/log4j.jar"/>
+	<classpathentry kind="lib" path="lib/java/log4j-1.2.13.jar"/>
 	<classpathentry kind="output" path="classes"/>
 </classpath>
