remove WSF-Client.jar when installing WSF-Service
git-svn-id: https://cbilsvn.pmacs.upenn.edu/svn/gus/WSF/trunk@4747 4235af6a-31f9-0310-9ad3-ecf6348f2534

--- a/build.xml
+++ b/build.xml
@@ -49,6 +49,7 @@
   </target>
 
   <target name="WSF/Plugin-Installation">
+    <delete file="${targetDir}/lib/java/WSF-Client.jar" quiet="true" />
     <ant target="defaultComponentInstall">
       <property name="project" value="WSF"/>
       <property name="component" value="Plugin"/>
@@ -146,6 +147,7 @@
       <arg line="${targetDir}/config/wsfService-deploy.wsdd" />
     </java>
 
+    <echo>WARNING: Please restart Web Service server, and run WSF web installation again, if you have not done so. </echo>
   </target>
 
   <target name="createConfigLink" unless="wsf-config.exist">
