--- a/Service/.classpath
+++ b/Service/.classpath
@@ -3,7 +3,7 @@
 	<classpathentry excluding="org/gusdb/wsf/test/WsfPortalClientTest.java" kind="src" path="src/java"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry sourcepath="ECLIPSE_HOME/plugins/org.eclipse.jdt.source_3.1.1/src/org.junit_3.8.1/junitsrc.zip" kind="var" path="JUNIT_HOME/junit.jar"/>
-	<classpathentry kind="lib" path="D:/jerric/apps/java/maze2d/lib/log4j.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/WSF - Plugin"/>
+	<classpathentry kind="lib" path="lib/java/log4j-1.2.13.jar"/>
 	<classpathentry kind="output" path="classes"/>
 </classpath>
