update the client jar file to have a correct WsfServiceException.class
git-svn-id: https://cbilsvn.pmacs.upenn.edu/svn/gus/WSF/trunk@5193 4235af6a-31f9-0310-9ad3-ecf6348f2534

--- a/build.xml
+++ b/build.xml
@@ -104,6 +104,10 @@
     </java>
         
     <delete file="../WSF/Client/src/java/org/gusdb/wsf/service/WsfService.java" />
+    <copy file="../WSF/Plugin/src/java/org/gusdb/wsf/plugin/WsfServiceException.java" 
+          todir="../WSF/Client/src/java/org/gusdb/wsf/plugin"
+          overwrite="true" />
+          
     <move file="../WSF/Client/src/java/org/gusdb/wsf/client/deploy.wsdd" 
           tofile="../WSF/Client/config/wsfService-deploy.wsdd" />
     <move file="../WSF/Client/src/java/org/gusdb/wsf/client/undeploy.wsdd" 
