--- a/build.xml
+++ b/build.xml
@@ -87,6 +87,8 @@
       <arg line="-o ../WSF/Client/config/WsfService.wsdl" />
       <arg line="-l${webserviceBaseUrl}/services/WsfService" />
       <arg line="-n .client.wsf.gusdb.org" />
+      <arg line="-y WRAPPED" />
+      <arg line="-u LITERAL" />
       <arg line="-porg.gusdb.wsf.service=urn:wsf_classes" />
       <arg line="org.gusdb.wsf.service.WsfService" />
     </java>
