added copy to include the WSF-Client.jar file in the WEB-INF/lib/ folder.  This is needed for ApiFed and WdkQuery Plugins
git-svn-id: https://cbilsvn.pmacs.upenn.edu/svn/gus/WSF/trunk@5270 4235af6a-31f9-0310-9ad3-ecf6348f2534

--- a/build.xml
+++ b/build.xml
@@ -34,6 +34,9 @@
     <move file="${targetDir}/lib/java/WSF-Service.jar" todir="${targetDir}/wsf-lib/java" />
     <move file="${targetDir}/lib/java/WSF-Plugin.jar" todir="${targetDir}/wsf-lib/java" />
 
+    <!-- Following line added for the ApiFedPlugin and WdkQueryPlugin -->
+    <move file="${targetDir}/lib/java/WSF-Client.jar" todir="${targetDir}/wsf-lib/java" />
+
   </target>
 
 
