--- a/Service/.classpath
+++ b/Service/.classpath
@@ -2,10 +2,10 @@
 <classpath>
 	<classpathentry excluding="org/gusdb/wsf/test/WsfPortalClientTest.java" kind="src" path="src/java"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry sourcepath="ECLIPSE_HOME/plugins/org.eclipse.jdt.source_3.1.1/src/org.junit_3.8.1/junitsrc.zip" kind="var" path="JUNIT_HOME/junit.jar"/>
+	<classpathentry kind="var" path="JUNIT_HOME/junit.jar" sourcepath="ECLIPSE_HOME/plugins/org.eclipse.jdt.source_3.1.1/src/org.junit_3.8.1/junitsrc.zip"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/WSF - Plugin"/>
-	<classpathentry kind="lib" path="lib/java/log4j-1.2.13.jar"/>
 	<classpathentry kind="lib" path="lib/java/axis.jar"/>
 	<classpathentry kind="lib" path="lib/java/jaxrpc.jar"/>
+	<classpathentry kind="lib" path="lib/java/log4j-1.2.14.jar"/>
 	<classpathentry kind="output" path="classes"/>
 </classpath>
