re-add a required dependancy for WSF/Service-Installation
git-svn-id: https://cbilsvn.pmacs.upenn.edu/svn/gus/WSF/trunk@5659 4235af6a-31f9-0310-9ad3-ecf6348f2534

--- a/build.xml
+++ b/build.xml
@@ -42,7 +42,8 @@
 
  <!-- ooooooooooooooooooooooo  Install Components  ooooooooooooooooooooooo -->
 
-  <target name="WSF/Service-Installation">
+  <target name="WSF/Service-Installation" depends="WSF/Plugin-Installation">
+
     <ant target="defaultComponentInstall">
       <property name="project" value="WSF"/>
       <property name="component" value="Service"/>
