fix a bug that prevents the build from finishing
git-svn-id: https://cbilsvn.pmacs.upenn.edu/svn/gus/WSF/trunk@5686 4235af6a-31f9-0310-9ad3-ecf6348f2534

--- a/Service/config/wsf-webinstall.properties.sample
+++ b/Service/config/wsf-webinstall.properties.sample
@@ -1,3 +1,2 @@
 webappTargetDir=<your_axis_webapp_dir>
-webserviceBaseUrl=<your_web_service_base_url>
-confTargetDir="/WEB-INF/wsf-config or value of wsfConfigDir_param in web.xml"
+webServiceBaseUrl=<your_web_service_base_url>
